lesson-9/modules/vpc/vpc.tf
# Головна мережа
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = { Name = var.vpc_name }
}

# Публічні підмережі
resource "aws_subnet" "public" {
  count                   = length(var.public_subnets)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnets[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name                                     = "public-subnet-${count.index}"
    "kubernetes.io/cluster/django-cluster"   = "shared"
    "kubernetes.io/role/elb"                 = "1"
  }
}

# Приватні підмережі
resource "aws_subnet" "private" {
  count             = length(var.private_subnets)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = {
    Name                                     = "private-subnet-${count.index}"
    "kubernetes.io/cluster/django-cluster"   = "shared"
    "kubernetes.io/role/internal-elb"        = "1"
  }
}

# Internet Gateway (для виходу в світ)
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "${var.vpc_name}-igw" }
}

# NAT Gateway (для виходу приватних підмереж в інтернет)
resource "aws_eip" "nat" {
  domain = "vpc"
  tags   = { Name = "${var.vpc_name}-nat-eip" }
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id # NAT має бути в публічній підмережі

  tags       = { Name = "${var.vpc_name}-nat" }
  depends_on = [aws_internet_gateway.igw]
}
